inquiryAdmin, Admin pagenation, Admin Update Delete Method add